test/expected/explain_fiv_v.out
explain void f( int, void )
                     ^
22: error: "void" must be only parameter if specified
